# tmux-warm-daemon

./: .gitignore  LICENSE.txt  README.md  attach_warm.sh  restart_daemon.sh  tmux.plugin.zsh.diff  tmux_warmer_daemon.py
python/: requirements.txt
rust/: Cargo.toml  mod.rs
